AUTOMAKE_OPTIONS = foreign
CXXFLAGS=-g -O3 -Wall -std=c++0x
bin_PROGRAMS=simulator
simulator_SOURCES=main.cpp node.cpp queue.cpp turboqueue.cpp packet.cpp event.cpp topology.cpp simpletopology.cpp flow.cpp pacedflow.cpp turboflow.cpp turboflow_perpkt.cpp fountainflow.cpp  params.cpp factory.cpp random_variable.cpp singlelinkexperiment.cpp pfabricexperiment.cpp continuousModelExperiment.cpp fixedDistributionExperiment.cpp
