AUTOMAKE_OPTIONS = foreign
CXXFLAGS=-g -O3 -Wall -std=c++0x -gdwarf-2
# -O0 -gdwarf-2 for debugging
bin_PROGRAMS=simulator
simulator_SOURCES=main.cpp fastpassflow.cpp fastpasshost.cpp magichost.cpp magicflow.cpp stats.cpp capabilityflow.cpp capabilityhost.cpp singlelinkexperiment.cpp debug.cpp node.cpp queue.cpp turboqueue.cpp packet.cpp event.cpp topology.cpp simpletopology.cpp schedulinghost.cpp flow.cpp pacedflow.cpp turboflow.cpp turboflow_perpkt.cpp fountainflow.cpp rtsctsflow.cpp params.cpp factory.cpp random_variable.cpp pfabricexperiment.cpp continuousModelExperiment.cpp fixedDistributionExperiment.cpp
